--- a/conversion/style.css
+++ b/conversion/style.css
@@ -65,6 +65,9 @@ form input {
 .button {
   padding-top: 2rem;
 }
+.msg {
+  margin: 2rem 0 2rem 0;
+}
 form button {
   height: 3rem;
   background-color: #723a65;
